--- a/package.json
+++ b/package.json
@@ -22,16 +22,24 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/graphql": "^7.10.6",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
-    "@types/mongodb": "^3.6.12",
     "apollo-server-express": "^2.23.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
+    "helmet": "^4.6.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -40,9 +48,14 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^3.0.1",
+    "@types/csurf": "^1.11.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.36",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -50,6 +63,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "passport": "^0.4.1",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
